# brainseg

./: .gitignore  README.md  Snakefile  config.yml  pyproject.toml  runner.py
.github/workflows/: fastsurfer_to_ghcr.yml  gouhfi_to_ghcr copy.yml  gouhfi_to_ghcr.yml  publish.yml  simnibs_to_ghcr.yml  synthseg_to_ghcr.yml
dockerfiles/: Dockerfile.fastsurfer  Dockerfile.gouhfi  Dockerfile.simnibs  Dockerfile.synthseg
envs/: fastsurfer.yml  gouhfi.yml  simnibs.yml  synthseg.yml
resources/: simnibs-label-list-lut.txt
scripts/: compare_segs.py  remap_labels.py
src/brainseg/: remap.py  utils.py
src/brainseg/clients/: T2_based_csf_mask.py  __init__.py  coregister.py  merge_csf_and_anatomy.py  remap_labels.py  resample.py  runner.py
src/brainseg/data/: freesurfer-label-list-lut.txt  freesurfer-label-list-reduced-lut.txt  gouhfi-label-list-cortex-lut.txt
src/brainseg/tools/: __init__.py  fastsurfer.py  gouhfi.py  simnibs.py  synthseg.py  synthstrip.py
