[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
dependencies = [
    "nibabel","fastremap"
]
name = "brainseg-containers"
version = "1.0.2"
description = "wrapper for brain segmentation tools"
authors = [{ name = "Marius Causemann", email = "mariusca@simula.no" }]
license = { file = "LICENSE" }
readme = "README.md"
urls = { homepage = "https://github.com/MariusCausemann/brainseg" }


[project.scripts]
brainseg = "brainseg.clients.runner:main"
brainseg_relabel = "brainseg.clients.remap_labels:main"


[project.optional-dependencies]
test = []
dev = ["pdbpp", "ipython", "mypy", "ruff"]
plot = ["matplotlib","nilearn", "numpy", "pandas"]
docs = [
    "jupyter-book<2.0.0",
    "jupytext",
    "ipykernel<7.0.0",     # Note: Remove once https://github.com/ipython/ipykernel/issues/1450 is in a release
    "sphinx-codeautolink",
]
all = ["brainseg-containers[test,dev,docs,plot]"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
# Folders to exclude
exclude = ["docs/", "build/"]
# Folder to check with mypy
files = ["src", "tests"]

[tool.ruff]
src = ["src", "tests", "docs"]
line-length = 100
indent-width = 4

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"brainseg.data" = ["*.txt"]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]


[tool.ruff.lint.isort]
known-first-party = ["brainseg"]
known-third-party = ["numpy", "pytest"]
section-order = [
    "future",
    "standard-library",
    "mpi",
    "third-party",
    "first-party",
    "local-folder",
]
